--- a/html_gui/index.html
+++ b/html_gui/index.html
@@ -5,6 +5,12 @@
     <title>Title</title>
 
     <script type="module">
+        import {Logger} from "/static/jsm/assembler/logger.js";
+
+        Logger.setup("#log")
+    </script>
+
+    <script type="module">
         import init, {Assembler, set_panic_hook, build_date} from '/static/jsm/assembler/assembler_dev.js';
 
         async function run() {
