logger + minor changes+fixes

--- a/html_gui/index.html
+++ b/html_gui/index.html
@@ -21,7 +21,7 @@
 
             document.querySelector("#build_ts").innerText = build_date();
 
-            let assembler = new Assembler(0);
+            let assembler = new Assembler();
 
             let btn = document.querySelector("#assemble");
             btn.addEventListener("click", function () {
